refs #29: Corrected some paths used to access CEGUI objects. Still need to hide debug window. Reordered the cmakelists items alphabetically and added headers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -403,38 +403,72 @@ SET(SRCS_CORE
     )
 
 SET(SRCS_GUI
-  ./src/gui/minimapwindow.cpp
-  ./src/gui/worldmap.cpp
-  ./src/gui/mainmenu.cpp
-  ./src/gui/charcreate.cpp
-  ./src/gui/ceguiutility.cpp
-  ./src/gui/tooltipmanager.cpp
-  ./src/gui/controlpanel.cpp
-  ./src/gui/inventory.cpp
-  ./src/gui/tradewindow.cpp
-  ./src/gui/dialoguewindow.cpp
-  ./src/gui/partyinfo.cpp
-  ./src/gui/networkwindows.cpp
-  ./src/gui/creditswindow.cpp
-  ./src/gui/mainwindow.cpp
   ./src/gui/application.cpp
-  ./src/gui/skilltree.cpp
-  ./src/gui/chatline.cpp
+  ./src/gui/application.h
+  ./src/gui/ceguiutility.cpp
+  ./src/gui/ceguiutility.h
+  ./src/gui/charcreate.cpp
+  ./src/gui/charcreate.h
   ./src/gui/charinfo.cpp
-  ./src/gui/itemwindow.cpp
-  ./src/gui/savegamelist.cpp
-  ./src/gui/scene.cpp
-  ./src/gui/graphicmanager.cpp
-  ./src/gui/main_gui.cpp
-  ./src/gui/messageboxes.cpp
-  ./src/gui/graphicobjectrenderinfo.cpp
-  ./src/gui/graphicobject.cpp
-  ./src/gui/questinfo.cpp
-  ./src/gui/soundhelper.cpp
-  ./src/gui/soundobject.cpp
-  ./src/gui/tooltip.cpp
-  ./src/gui/optionswindow.cpp
+  ./src/gui/charinfo.h
+  ./src/gui/chatline.cpp
+  ./src/gui/chatline.h
   ./src/gui/clipboard.cpp
+  ./src/gui/clipboard.h
+  ./src/gui/controlpanel.cpp
+  ./src/gui/controlpanel.h
+  ./src/gui/creditswindow.cpp
+  ./src/gui/creditswindow.h
+  ./src/gui/dialoguewindow.cpp
+  ./src/gui/dialoguewindow.h
+  ./src/gui/graphicmanager.cpp
+  ./src/gui/graphicmanager.h
+  ./src/gui/graphicobject.cpp
+  ./src/gui/graphicobject.h
+  ./src/gui/graphicobjectrenderinfo.cpp
+  ./src/gui/graphicobjectrenderinfo.h
+  ./src/gui/inventory.cpp
+  ./src/gui/inventory.h
+  ./src/gui/itemwindow.cpp
+  ./src/gui/itemwindow.h
+  ./src/gui/listitem.h
+  ./src/gui/main_gui.cpp
+  ./src/gui/mainmenu.cpp
+  ./src/gui/mainmenu.h
+  ./src/gui/mainwindow.cpp
+  ./src/gui/mainwindow.h
+  ./src/gui/messageboxes.cpp
+  ./src/gui/messageboxes.h
+  ./src/gui/minimapwindow.cpp
+  ./src/gui/minimapwindow.h
+  ./src/gui/networkwindows.cpp
+  ./src/gui/networkwindows.h
+  ./src/gui/optionswindow.cpp
+  ./src/gui/optionswindow.h
+  ./src/gui/partyinfo.cpp
+  ./src/gui/partyinfo.h
+  ./src/gui/questinfo.cpp
+  ./src/gui/questinfo.h
+  ./src/gui/savegamelist.cpp
+  ./src/gui/savegamelist.h
+  ./src/gui/scene.cpp
+  ./src/gui/scene.h
+  ./src/gui/skilltree.cpp
+  ./src/gui/skilltree.h
+  ./src/gui/soundhelper.cpp
+  ./src/gui/soundhelper.h
+  ./src/gui/soundobject.cpp
+  ./src/gui/soundobject.h
+  ./src/gui/tooltip.cpp
+  ./src/gui/tooltip.h
+  ./src/gui/tooltipmanager.cpp
+  ./src/gui/tooltipmanager.h
+  ./src/gui/tooltipsettings.h
+  ./src/gui/tradewindow.cpp
+  ./src/gui/tradewindow.h
+  ./src/gui/window.h
+  ./src/gui/worldmap.cpp
+  ./src/gui/worldmap.h
 #   ./src/gui/ShaderManager.cpp
 #   ./src/gui/ShadowCameraSetup.cpp
     )    
@@ -457,27 +491,47 @@ SET(SRCS
 )
  
 IF(SUMWARS_BUILD_TOOLS)
-  SET(SRCS_BUILD_TOOLS
+  SET(SRCS_BUILD_TOOLS_DBG_PANEL
     ./src/gui/debugpanel/benchmarktab.cpp
-    ./src/gui/debugpanel/debugpanel.cpp
+    ./src/gui/debugpanel/benchmarktab.h
     ./src/gui/debugpanel/debugcameratab.cpp
-    ./src/gui/debugpanel/iconeditortab.cpp
+    ./src/gui/debugpanel/debugcameratab.h
+    ./src/gui/debugpanel/debugpanel.cpp
+    ./src/gui/debugpanel/debugpanel.h
     ./src/gui/debugpanel/guidebugtab.cpp
+    ./src/gui/debugpanel/guidebugtab.h
+    ./src/gui/debugpanel/iconeditortab.cpp
+    ./src/gui/debugpanel/iconeditortab.h
     ./src/gui/debugpanel/luascripttab.cpp
+    ./src/gui/debugpanel/luascripttab.h
     ./src/gui/debugpanel/textfileeditwindow.cpp
+    ./src/gui/debugpanel/textfileeditwindow.h
     ./src/gui/debugpanel/filebrowser/filebrowser.cpp
-    ./src/gui/contenteditor/contenteditor.cpp
-    ./src/gui/contenteditor/contenteditortab.cpp
-    ./src/gui/contenteditor/fixedobjecteditor.cpp
-    ./src/gui/contenteditor/renderinfoeditor.cpp
-    ./src/gui/contenteditor/itemeditor.cpp
-    ./src/gui/contenteditor/monstereditor.cpp
-    ./src/gui/contenteditor/gameinfotab.cpp
+    ./src/gui/debugpanel/filebrowser/filebrowser.h
     )
-  SOURCE_GROUP ("tools" FILES ${SRCS_BUILD_TOOLS})
+  SET(SRCS_BUILD_TOOLS_CONTENT_EDITOR
+    ./src/gui/contenteditor/contenteditor.cpp
+    ./src/gui/contenteditor/contenteditor.h
+    ./src/gui/contenteditor/contenteditortab.cpp
+    ./src/gui/contenteditor/contenteditortab.h
+    ./src/gui/contenteditor/contenttab.h
+    ./src/gui/contenteditor/fixedobjecteditor.cpp
+    ./src/gui/contenteditor/fixedobjecteditor.h
+    ./src/gui/contenteditor/gameinfotab.cpp
+    ./src/gui/contenteditor/gameinfotab.h
+    ./src/gui/contenteditor/itemeditor.cpp
+    ./src/gui/contenteditor/itemeditor.h
+    ./src/gui/contenteditor/monstereditor.cpp
+    ./src/gui/contenteditor/monstereditor.h
+    ./src/gui/contenteditor/renderinfoeditor.cpp
+    ./src/gui/contenteditor/renderinfoeditor.h
+    )
+  SOURCE_GROUP ("tools\\dbgpanel" FILES ${SRCS_BUILD_TOOLS_DBG_PANEL})
+  SOURCE_GROUP ("tools\\contedit" FILES ${SRCS_BUILD_TOOLS_CONTENT_EDITOR})
   SET(SRCS
     ${SRCS}
-    ${SRCS_BUILD_TOOLS}
+    ${SRCS_BUILD_TOOLS_DBG_PANEL}
+    ${SRCS_BUILD_TOOLS_CONTENT_EDITOR}
     )
 ENDIF()
 
